from typing import Any
from pygame import Rect, Surface, Vector2 as v2
from pygame import transform

from input import Input
from button_script import ButtonScript

class Button():

    DEFAULT: int  = 0
    HOVER: int    = 1
    DISABLED: int = 2
    
    def __init__(self, id: str, hitbox: Rect, script: ButtonScript, textures: Surface | list[Surface], alive : bool = False, enabled : bool = True) -> None:
        self.__id = id
        self.__hitbox = hitbox
        self.__script = script
        self.__state = 0
        self.__enabled = enabled

        # Default, Hover, Disabled
        if isinstance(textures, Surface):
            self.__textures = [transform.scale(textures, hitbox.size)] * 3
        else: self.__textures = textures

        ButtonManager.register_buttons(self)
        if alive: ButtonManager.alive(id)

    def __del__(self):
        ButtonManager.unregister_buttons(self.__id)

    def draw(self, window: Surface) -> None:
        window.blit(self.__textures[self.__state], self.__hitbox)

    def run(self):
        self.__script()

    @property
    def id(self) -> str:
        return self.__id

    @property
    def hitbox(self) -> Rect:
        return self.__hitbox

    @property
    def state(self) -> int:
        return self.__state

    @state.setter
    def state(self, value: int) -> None:
        self.__state = value

    @property
    def enabled(self) -> bool:
        return self.__enabled
    
    @enabled.setter
    def enabled(self, value: bool) -> None:
        self.__enabled = value

class ButtonManager():

    # Set of Buttons that are currently rendered
    __alives: set[str] = set()
    # List of ALL Buttons
    __buttons: dict[str, Button] = dict()

    __window: Surface

    is_init: bool = False


    def init(window: Surface) -> None:
        if not Input.is_init:
            Input.init()
        ButtonManager.__window = window

        ButtonManager.is_init = True

    def register_buttons(*buttons: list[Button]) -> None:
        for button in buttons:
            ButtonManager.__buttons[button.id] = button

    def unregister_buttons(*ids : list[str]) -> None:
        for id in ids:
            ButtonManager.kill(id)
            ButtonManager.__buttons.pop(id, None)

    def kill(*ids : list[str]) -> None:
        for id in [_id for _id in ids if ButtonManager.is_alive(_id)]:
            ButtonManager.__alives.remove(id)

    def alive(*ids : list[str]) -> None:
        for id in [_id for _id in ids if _id in ButtonManager.__buttons.keys()]:
            ButtonManager.__alives.add(id)

    def is_alive(id: str) -> bool:
        return id in ButtonManager.__alives

    def __handle_motion(button: Button, mouse: v2) -> None:
        if button.hitbox.collidepoint(mouse):
            if button.state == Button.DEFAULT:
                button.state = Button.HOVER
                # print(f"hovering button {button.id}")
        elif button.state == Button.HOVER: 
            button.state = Button.DEFAULT
            # print(f"unhovering button {button.id}")

    def __handle_click(button: Button) -> None:
        if button.state == Button.HOVER:
            button.run()
            # print(f"clicking button {button.id}")

    # optimisable ?
    def __update_states():
        motion = Input.get_motion() != v2(0,0)
        click = Input.is_clicked_once()
        for id in ButtonManager.__alives:
            button = ButtonManager.__buttons[id]
            if button.state == Button.DISABLED: 
                continue
            if motion:
                ButtonManager.__handle_motion(button, Input.get_mouse())
            if click:
                ButtonManager.__handle_click(button)
                
    def __draw():
        for button in ButtonManager.__alives:
            ButtonManager.__buttons[button].draw(ButtonManager.__window)

    def update():
        ButtonManager.__update_states()
        ButtonManager.__draw()